src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class SEMICOLON program
Rule 2     program -> class SEMICOLON
Rule 3     class -> CLASS TYPE inheritence LBRACE features RBRACE
Rule 4     inheritence -> INHERITS TYPE
Rule 5     inheritence -> empty
Rule 6     features -> feature SEMICOLON features
Rule 7     features -> empty
Rule 8     feature -> method_declaration
Rule 9     feature -> attribute
Rule 10    attribute -> id_type
Rule 11    attribute -> id_type ASSIGN expression
Rule 12    id_type -> ID TDOTS TYPE
Rule 13    method_declaration -> ID LBRACKET formals RBRACKET TDOTS TYPE LBRACE expression RBRACE
Rule 14    formals -> id_type COMMA formals
Rule 15    formals -> id_type
Rule 16    formals -> empty
Rule 17    expression_list -> expression SEMICOLON expression_list
Rule 18    expression_list -> expression SEMICOLON
Rule 19    expression -> NOT expression
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> MINUS expression
Rule 25    expression -> LBRACKET expression RBRACKET
Rule 26    expression -> ISVOID expression
Rule 27    expression -> block
Rule 28    expression -> conditional
Rule 29    expression -> loop
Rule 30    expression -> case
Rule 31    expression -> dispatch
Rule 32    expression -> BCOMPLEMENT expression
Rule 33    block -> LBRACE expression_list RBRACE
Rule 34    expression -> ID
Rule 35    expression -> INTEGER
Rule 36    expression -> STRING
Rule 37    expression -> TRUE
Rule 38    expression -> FALSE
Rule 39    expression -> NEW TYPE
Rule 40    expression -> MINUS let_expression
Rule 41    expression -> let_expression
Rule 42    dispatch -> expression especific DOT dispatch_call
Rule 43    dispatch -> dispatch_call
Rule 44    especific -> DISP TYPE
Rule 45    especific -> empty
Rule 46    dispatch_call -> ID LBRACKET params_expression RBRACKET
Rule 47    params_expression -> expression
Rule 48    params_expression -> expression COMMA params_expression
Rule 49    params_expression -> empty
Rule 50    empty -> <empty>
Rule 51    let_expression -> LET declaration_list IN expression
Rule 52    declaration_list -> attribute COMMA declaration_list
Rule 53    declaration_list -> attribute
Rule 54    conditional -> IF expression THEN expression ELSE expression FI
Rule 55    loop -> WHILE expression LOOP expression POOL
Rule 56    case -> CASE expression OF implications ESAC
Rule 57    implications -> implication SEMICOLON implications
Rule 58    implications -> implication SEMICOLON
Rule 59    implication -> id_type IMPLY expression
Rule 60    expression -> expression LTHAN expression
Rule 61    expression -> expression LETHAN expression
Rule 62    expression -> expression EQUALS expression
Rule 63    expression -> ID ASSIGN expression

Terminals, with rules where they appear

ASSIGN               : 11 63
BCOMPLEMENT          : 32
CASE                 : 56
CLASS                : 3
COMMA                : 14 48 52
DISP                 : 44
DIVIDE               : 23
DOT                  : 42
ELSE                 : 54
EQUALS               : 62
ESAC                 : 56
FALSE                : 38
FI                   : 54
ID                   : 12 13 34 46 63
IF                   : 54
IMPLY                : 59
IN                   : 51
INHERITS             : 4
INTEGER              : 35
ISVOID               : 26
LBRACE               : 3 13 33
LBRACKET             : 13 25 46
LET                  : 51
LETHAN               : 61
LOOP                 : 55
LTHAN                : 60
MINUS                : 21 24 40
NEW                  : 39
NOT                  : 19
OF                   : 56
PLUS                 : 20
POOL                 : 55
RBRACE               : 3 13 33
RBRACKET             : 13 25 46
SEMICOLON            : 1 2 6 17 18 57 58
STRING               : 36
TDOTS                : 12 13
THEN                 : 54
TIMES                : 22
TRUE                 : 37
TYPE                 : 3 4 12 13 39 44
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

attribute            : 9 52 53
block                : 27
case                 : 30
class                : 1 2
conditional          : 28
declaration_list     : 51 52
dispatch             : 31
dispatch_call        : 42 43
empty                : 5 7 16 45 49
especific            : 42
expression           : 11 13 17 18 19 20 20 21 21 22 22 23 23 24 25 26 32 42 47 48 51 54 54 54 55 55 56 59 60 60 61 61 62 62 63
expression_list      : 17 33
feature              : 6
features             : 3 6
formals              : 13 14
id_type              : 10 11 14 15 59
implication          : 57 58
implications         : 56 57
inheritence          : 3
let_expression       : 40 41
loop                 : 29
method_declaration   : 8
params_expression    : 46 48
program              : 1 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE inheritence LBRACE features RBRACE

    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> class . SEMICOLON program
    (2) program -> class . SEMICOLON

    SEMICOLON       shift and go to state 4


state 3

    (3) class -> CLASS . TYPE inheritence LBRACE features RBRACE

    TYPE            shift and go to state 5


state 4

    (1) program -> class SEMICOLON . program
    (2) program -> class SEMICOLON .
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE inheritence LBRACE features RBRACE

    $end            reduce using rule 2 (program -> class SEMICOLON .)
    CLASS           shift and go to state 3

    class                          shift and go to state 2
    program                        shift and go to state 6

state 5

    (3) class -> CLASS TYPE . inheritence LBRACE features RBRACE
    (4) inheritence -> . INHERITS TYPE
    (5) inheritence -> . empty
    (50) empty -> .

    INHERITS        shift and go to state 8
    LBRACE          reduce using rule 50 (empty -> .)

    inheritence                    shift and go to state 7
    empty                          shift and go to state 9

state 6

    (1) program -> class SEMICOLON program .

    $end            reduce using rule 1 (program -> class SEMICOLON program .)


state 7

    (3) class -> CLASS TYPE inheritence . LBRACE features RBRACE

    LBRACE          shift and go to state 10


state 8

    (4) inheritence -> INHERITS . TYPE

    TYPE            shift and go to state 11


state 9

    (5) inheritence -> empty .

    LBRACE          reduce using rule 5 (inheritence -> empty .)


state 10

    (3) class -> CLASS TYPE inheritence LBRACE . features RBRACE
    (6) features -> . feature SEMICOLON features
    (7) features -> . empty
    (8) feature -> . method_declaration
    (9) feature -> . attribute
    (50) empty -> .
    (13) method_declaration -> . ID LBRACKET formals RBRACKET TDOTS TYPE LBRACE expression RBRACE
    (10) attribute -> . id_type
    (11) attribute -> . id_type ASSIGN expression
    (12) id_type -> . ID TDOTS TYPE

    RBRACE          reduce using rule 50 (empty -> .)
    ID              shift and go to state 17

    features                       shift and go to state 12
    feature                        shift and go to state 13
    empty                          shift and go to state 14
    method_declaration             shift and go to state 15
    attribute                      shift and go to state 16
    id_type                        shift and go to state 18

state 11

    (4) inheritence -> INHERITS TYPE .

    LBRACE          reduce using rule 4 (inheritence -> INHERITS TYPE .)


state 12

    (3) class -> CLASS TYPE inheritence LBRACE features . RBRACE

    RBRACE          shift and go to state 19


state 13

    (6) features -> feature . SEMICOLON features

    SEMICOLON       shift and go to state 20


state 14

    (7) features -> empty .

    RBRACE          reduce using rule 7 (features -> empty .)


state 15

    (8) feature -> method_declaration .

    SEMICOLON       reduce using rule 8 (feature -> method_declaration .)


state 16

    (9) feature -> attribute .

    SEMICOLON       reduce using rule 9 (feature -> attribute .)


state 17

    (13) method_declaration -> ID . LBRACKET formals RBRACKET TDOTS TYPE LBRACE expression RBRACE
    (12) id_type -> ID . TDOTS TYPE

    LBRACKET        shift and go to state 21
    TDOTS           shift and go to state 22


state 18

    (10) attribute -> id_type .
    (11) attribute -> id_type . ASSIGN expression

    SEMICOLON       reduce using rule 10 (attribute -> id_type .)
    COMMA           reduce using rule 10 (attribute -> id_type .)
    IN              reduce using rule 10 (attribute -> id_type .)
    ASSIGN          shift and go to state 23


state 19

    (3) class -> CLASS TYPE inheritence LBRACE features RBRACE .

    SEMICOLON       reduce using rule 3 (class -> CLASS TYPE inheritence LBRACE features RBRACE .)


state 20

    (6) features -> feature SEMICOLON . features
    (6) features -> . feature SEMICOLON features
    (7) features -> . empty
    (8) feature -> . method_declaration
    (9) feature -> . attribute
    (50) empty -> .
    (13) method_declaration -> . ID LBRACKET formals RBRACKET TDOTS TYPE LBRACE expression RBRACE
    (10) attribute -> . id_type
    (11) attribute -> . id_type ASSIGN expression
    (12) id_type -> . ID TDOTS TYPE

    RBRACE          reduce using rule 50 (empty -> .)
    ID              shift and go to state 17

    feature                        shift and go to state 13
    features                       shift and go to state 24
    empty                          shift and go to state 14
    method_declaration             shift and go to state 15
    attribute                      shift and go to state 16
    id_type                        shift and go to state 18

state 21

    (13) method_declaration -> ID LBRACKET . formals RBRACKET TDOTS TYPE LBRACE expression RBRACE
    (14) formals -> . id_type COMMA formals
    (15) formals -> . id_type
    (16) formals -> . empty
    (12) id_type -> . ID TDOTS TYPE
    (50) empty -> .

    ID              shift and go to state 25
    RBRACKET        reduce using rule 50 (empty -> .)

    formals                        shift and go to state 26
    id_type                        shift and go to state 27
    empty                          shift and go to state 28

state 22

    (12) id_type -> ID TDOTS . TYPE

    TYPE            shift and go to state 29


state 23

    (11) attribute -> id_type ASSIGN . expression
    (19) expression -> . NOT expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LBRACKET expression RBRACKET
    (26) expression -> . ISVOID expression
    (27) expression -> . block
    (28) expression -> . conditional
    (29) expression -> . loop
    (30) expression -> . case
    (31) expression -> . dispatch
    (32) expression -> . BCOMPLEMENT expression
    (34) expression -> . ID
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NEW TYPE
    (40) expression -> . MINUS let_expression
    (41) expression -> . let_expression
    (60) expression -> . expression LTHAN expression
    (61) expression -> . expression LETHAN expression
    (62) expression -> . expression EQUALS expression
    (63) expression -> . ID ASSIGN expression
    (33) block -> . LBRACE expression_list RBRACE
    (54) conditional -> . IF expression THEN expression ELSE expression FI
    (55) loop -> . WHILE expression LOOP expression POOL
    (56) case -> . CASE expression OF implications ESAC
    (42) dispatch -> . expression especific DOT dispatch_call
    (43) dispatch -> . dispatch_call
    (51) let_expression -> . LET declaration_list IN expression
    (46) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    NOT             shift and go to state 31
    MINUS           shift and go to state 32
    LBRACKET        shift and go to state 33
    ISVOID          shift and go to state 34
    BCOMPLEMENT     shift and go to state 40
    ID              shift and go to state 41
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    NEW             shift and go to state 46
    LBRACE          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    CASE            shift and go to state 51
    LET             shift and go to state 53

    expression                     shift and go to state 30
    block                          shift and go to state 35
    conditional                    shift and go to state 36
    loop                           shift and go to state 37
    case                           shift and go to state 38
    dispatch                       shift and go to state 39
    let_expression                 shift and go to state 47
    dispatch_call                  shift and go to state 52

state 24

    (6) features -> feature SEMICOLON features .

    RBRACE          reduce using rule 6 (features -> feature SEMICOLON features .)


state 25

    (12) id_type -> ID . TDOTS TYPE

    TDOTS           shift and go to state 22


state 26

    (13) method_declaration -> ID LBRACKET formals . RBRACKET TDOTS TYPE LBRACE expression RBRACE

    RBRACKET        shift and go to state 54


state 27

    (14) formals -> id_type . COMMA formals
    (15) formals -> id_type .

    COMMA           shift and go to state 55
    RBRACKET        reduce using rule 15 (formals -> id_type .)


state 28

    (16) formals -> empty .

    RBRACKET        reduce using rule 16 (formals -> empty .)


state 29

    (12) id_type -> ID TDOTS TYPE .

    ASSIGN          reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    SEMICOLON       reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    COMMA           reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    RBRACKET        reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    IN              reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    IMPLY           reduce using rule 12 (id_type -> ID TDOTS TYPE .)


state 30

    (11) attribute -> id_type ASSIGN expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (60) expression -> expression . LTHAN expression
    (61) expression -> expression . LETHAN expression
    (62) expression -> expression . EQUALS expression
    (42) dispatch -> expression . especific DOT dispatch_call
    (44) especific -> . DISP TYPE
    (45) especific -> . empty
    (50) empty -> .

    SEMICOLON       reduce using rule 11 (attribute -> id_type ASSIGN expression .)
    COMMA           reduce using rule 11 (attribute -> id_type ASSIGN expression .)
    IN              reduce using rule 11 (attribute -> id_type ASSIGN expression .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    TIMES           shift and go to state 58
    DIVIDE          shift and go to state 59
    LTHAN           shift and go to state 60
    LETHAN          shift and go to state 61
    EQUALS          shift and go to state 62
    DISP            shift and go to state 64
    DOT             reduce using rule 50 (empty -> .)

    especific                      shift and go to state 63
    empty                          shift and go to state 65

state 31

    (19) expression -> NOT . expression
    (19) expression -> . NOT expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LBRACKET expression RBRACKET
    (26) expression -> . ISVOID expression
    (27) expression -> . block
    (28) expression -> . conditional
    (29) expression -> . loop
    (30) expression -> . case
    (31) expression -> . dispatch
    (32) expression -> . BCOMPLEMENT expression
    (34) expression -> . ID
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NEW TYPE
    (40) expression -> . MINUS let_expression
    (41) expression -> . let_expression
    (60) expression -> . expression LTHAN expression
    (61) expression -> . expression LETHAN expression
    (62) expression -> . expression EQUALS expression
    (63) expression -> . ID ASSIGN expression
    (33) block -> . LBRACE expression_list RBRACE
    (54) conditional -> . IF expression THEN expression ELSE expression FI
    (55) loop -> . WHILE expression LOOP expression POOL
    (56) case -> . CASE expression OF implications ESAC
    (42) dispatch -> . expression especific DOT dispatch_call
    (43) dispatch -> . dispatch_call
    (51) let_expression -> . LET declaration_list IN expression
    (46) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    NOT             shift and go to state 31
    MINUS           shift and go to state 32
    LBRACKET        shift and go to state 33
    ISVOID          shift and go to state 34
    BCOMPLEMENT     shift and go to state 40
    ID              shift and go to state 41
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    NEW             shift and go to state 46
    LBRACE          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    CASE            shift and go to state 51
    LET             shift and go to state 53

    expression                     shift and go to state 66
    block                          shift and go to state 35
    conditional                    shift and go to state 36
    loop                           shift and go to state 37
    case                           shift and go to state 38
    dispatch                       shift and go to state 39
    let_expression                 shift and go to state 47
    dispatch_call                  shift and go to state 52

state 32

    (24) expression -> MINUS . expression
    (40) expression -> MINUS . let_expression
    (19) expression -> . NOT expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LBRACKET expression RBRACKET
    (26) expression -> . ISVOID expression
    (27) expression -> . block
    (28) expression -> . conditional
    (29) expression -> . loop
    (30) expression -> . case
    (31) expression -> . dispatch
    (32) expression -> . BCOMPLEMENT expression
    (34) expression -> . ID
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NEW TYPE
    (40) expression -> . MINUS let_expression
    (41) expression -> . let_expression
    (60) expression -> . expression LTHAN expression
    (61) expression -> . expression LETHAN expression
    (62) expression -> . expression EQUALS expression
    (63) expression -> . ID ASSIGN expression
    (51) let_expression -> . LET declaration_list IN expression
    (33) block -> . LBRACE expression_list RBRACE
    (54) conditional -> . IF expression THEN expression ELSE expression FI
    (55) loop -> . WHILE expression LOOP expression POOL
    (56) case -> . CASE expression OF implications ESAC
    (42) dispatch -> . expression especific DOT dispatch_call
    (43) dispatch -> . dispatch_call
    (46) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    NOT             shift and go to state 31
    MINUS           shift and go to state 32
    LBRACKET        shift and go to state 33
    ISVOID          shift and go to state 34
    BCOMPLEMENT     shift and go to state 40
    ID              shift and go to state 41
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    NEW             shift and go to state 46
    LET             shift and go to state 53
    LBRACE          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    CASE            shift and go to state 51

    expression                     shift and go to state 67
    let_expression                 shift and go to state 68
    block                          shift and go to state 35
    conditional                    shift and go to state 36
    loop                           shift and go to state 37
    case                           shift and go to state 38
    dispatch                       shift and go to state 39
    dispatch_call                  shift and go to state 52

state 33

    (25) expression -> LBRACKET . expression RBRACKET
    (19) expression -> . NOT expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LBRACKET expression RBRACKET
    (26) expression -> . ISVOID expression
    (27) expression -> . block
    (28) expression -> . conditional
    (29) expression -> . loop
    (30) expression -> . case
    (31) expression -> . dispatch
    (32) expression -> . BCOMPLEMENT expression
    (34) expression -> . ID
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NEW TYPE
    (40) expression -> . MINUS let_expression
    (41) expression -> . let_expression
    (60) expression -> . expression LTHAN expression
    (61) expression -> . expression LETHAN expression
    (62) expression -> . expression EQUALS expression
    (63) expression -> . ID ASSIGN expression
    (33) block -> . LBRACE expression_list RBRACE
    (54) conditional -> . IF expression THEN expression ELSE expression FI
    (55) loop -> . WHILE expression LOOP expression POOL
    (56) case -> . CASE expression OF implications ESAC
    (42) dispatch -> . expression especific DOT dispatch_call
    (43) dispatch -> . dispatch_call
    (51) let_expression -> . LET declaration_list IN expression
    (46) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    NOT             shift and go to state 31
    MINUS           shift and go to state 32
    LBRACKET        shift and go to state 33
    ISVOID          shift and go to state 34
    BCOMPLEMENT     shift and go to state 40
    ID              shift and go to state 41
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    NEW             shift and go to state 46
    LBRACE          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    CASE            shift and go to state 51
    LET             shift and go to state 53

    expression                     shift and go to state 69
    block                          shift and go to state 35
    conditional                    shift and go to state 36
    loop                           shift and go to state 37
    case                           shift and go to state 38
    dispatch                       shift and go to state 39
    let_expression                 shift and go to state 47
    dispatch_call                  shift and go to state 52

state 34

    (26) expression -> ISVOID . expression
    (19) expression -> . NOT expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LBRACKET expression RBRACKET
    (26) expression -> . ISVOID expression
    (27) expression -> . block
    (28) expression -> . conditional
    (29) expression -> . loop
    (30) expression -> . case
    (31) expression -> . dispatch
    (32) expression -> . BCOMPLEMENT expression
    (34) expression -> . ID
    (35) expression -> . INTEGER
    (36) expression -> . STRING
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NEW TYPE
    (40) expression -> . MINUS let_expression
    (41) expression -> . let_expression
    (60) expression -> . expression LTHAN expression
    (61) expression -> . expression LETHAN expression
    (62) expression -> . expression EQUALS expression
    (63) expression -> . ID ASSIGN expression
    (33) block -> . LBRACE expression_list RBRACE
    (54) conditional -> . IF expression THEN expression ELSE expression FI
    (55) loop -> . WHILE expression LOOP expression POOL
    (56) case -> . CASE expression OF implications ESAC
    (42) dispatch -> . expression especific DOT dispatch_call
    (43) dispatch -> . dispatch_call
    (51) let_expression -> . LET declaration_list IN expression
    (46) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    NOT             shift and go to state 31
    MINUS           shift and go to state 32
    LBRACKET        shift and go to state 33
    ISVOID          shift and go to state 34
    BCOMPLEMENT     shift and go to state 40
    ID              shift and go to state 41
    INTEGER         shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    NEW             shift and go to state 46
    LBRACE          shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    CASE            shift and go to state 51
    LET             shift and go to state 53

    expression                     shift and go to state 70
    block                          shift and go to state 35
    conditional                    shift and go to state 36
    loop                           shift and go to state 37
    case                           shift and go to state 38
    dispatch                       shift and go to state 39
    let_expression                 shift and go to state 47
    dispatch_call                  shift and go to state 52

state 35

    (27) expression -> block .
